# semantic-jserv

./: .gitignore  README.md  git-conflict  git-network  release-jsample.sh  release-notes.md
docs/docsync/: .buildinfo  genindex.html  index.html  issues-closed.html  issues.html  objects.inv  search.html  searchindex.js
docsync.jserv/: .gitignore  .project  Dockerfile  README.md  pom.xml
docsync.jserv-closed/: .gitignore  .project  README.md  pom.xml
docsync.jserv/docsphinx/: Makefile  conf.py  index.rst  issues-closed.rst  issues.rst
docsync.jserv/docsphinx/design/: nyquence.xlsx  sync.ddl.sql  (+3 more)
jserv-album/: .classpath  .gitignore  .project  2025-05-21.error  Dockerfile  Dockerfile-0.6.50  Makefile  Makefile-backup  docker-compose-mysql.yml  docker-compose-mysql.yml-backup  docker-compose.yml  docker-init  docker-start  docker-start-0.6.50  docker-start-0.6.50-backup  docker-start-treegrid  install.sh  pom.xml  portfolio-0.7.0-py3-none-any.whl  portfolio-synode-0.7-py3-none-any.whl  portfolio_synode-0.7.0-py3-none-any.whl  tasks.0.7.7.json  tasks.0.7.8.json  tasks.config  tasks.config.json  tasks.py  touch  touch-backup
jserv-album-lib/: .classpath  .gitignore  .project  README.md  pom.xml
jserv-album/album-web-0.4/: admin.html  github.json  index.html  login.html  portal.html
jserv-album/back-Y201/: dictionary.json
jserv-album/back-x29/: dictionary.json  doc-jserv.db
jserv-album/install-settings/: install.sh
jserv-album/install-settings-delete/: install.sh  set-jdk-exiftool.sh
jserv-album/vol-X29/: bug-analysis-2025-07-22.txt  dictionary.json  doc-jserv.db  jserv-main.db  syntity.json
jserv-album/vol-Y201/: README.md  bug-analysis-2025-07-22-nv-deny.txt  doc-jserv.db  jserv-main.db
jserv-album/vol2/: dictionary.json  doc-jserv.db  jserv-main.db  ura
jserv-album/volume/: album.mysql.sql  album.sqlite.sql  h_photos.sql  system-Acadynamo.db  system.db  system.sqlite
jserv-album/volume-0.6.50/: system.db
jserv-album/volume-dynamo/: album.sqlite.sql  h_photos.sql
jserv-album/volume-treegrid/: album-cloud.graphml  album.sqlite.sql  system.db
jserv-gen.py3/: .gitignore  README.md  peers.py  pyproject.toml
jserv-gen.py3/src/semantier_gen/io/oz/semanticpeer/: generator.py
jserv-gen.py3/test/: t_01_gen_echo2_msg.py  t_01_gen_echomsg.py  t_02_gen_jserv.py  t_03_gen_anclient_camke.py  test.py
jserv-gen.py3/test/ast/: device.ast.json  docsreq.ast.json  docsresp.ast.json  echo2.ast.json  expsyncdoc.ast.json  pageinf.ast.json  pathspage.ast.json  session-req.ast.json  session-resp.ast.json  synentity.ast.json
jserv-gen.py3/test/settings/: t_01-settings.json  t_02-jserv.json  t_03-anclient.cmake.json  t_03-synode.json
jserv-north/: .project  pom.xml
jserv-quiz/: .classpath  .gitignore  .project  Dockerfile  Dockerfile-jquiz  pom.xml
jserv-sample/: .classpath  .gitignore  .project  Dockerfile  README.md  docker-start  jserv-sample-protocol.jardesc  pom.xml
jserv-sample/volume/: create-users.sql  syslog.sqlite  system.sqlite
jserv-sandbox/: .classpath  .gitignore  .project  Dockerfile  docker-start  pom.xml
jserv-sandbox/volume/: album-system.db  sandbox.sqlite
semantic.jserv/: .classpath  .gitignore  .project  jserv-rt.jardesc  pom.xml
synode.py/: .gitignore  README.md  pyinstallerw.py  pyproject.toml  requirements.txt  setup-cli.spec  setup-gui.spec  setup.delete  setup.py  tasks.py  uninstall-srv.spec
synode.py/WEB-INF/: README.md  config.xml  connects.xml  html-service.json  settings.json
synode.py/registry/: dictionary.json
synode.py/registry-deploy/X29/: dictionary.json  settings.json
synode.py/registry-deploy/Y201/: dictionary.json  settings.json
synode.py/registry-i/: dictionary.json  settings.json  settings.json.non-ici  syntity.json
synode.py/src/: __init__.py  commands.py
synode.py/src/io/: __init__.py
synode.py/src/io-delete/odysz-delete/: semantics.py
synode.py/src/io-delete/odysz-delete/semantic/: jprotocol.py
synode.py/src/io-delete/odysz-delete/semantic/jserv/: echo.py  signup.py
synode.py/src/io/odysz/semantic/: jprotocol.py  syn.py
synode.py/src/io/odysz/semantic/jserv/: echo.py  signup.py
synode.py/src/io/oz/: srv.py
synode.py/src/io/oz/jserv/docs/syn/: singleton.py
synode.py/src/io/oz/srv/: __init__.py
synode.py/src/io/oz/syn/: __init__.py
synode.py/src/io/oz/syntier/: serv.py  srv.py
synode.py/src/synodepy3/: Utils.py  __init__.py  __main__.py  __version__.py  _test_.py  cli.py  commands.py  form.ui  htmlsrv.py-delete  install-jre.py  install_jre.py  installer_api.py  jre_downloader.py  prompt.py  synode-gui.pyproject  synode.json  temurin17.json  ui_form.py  uninstall_cli.py  validators.py  websrv.py  websrv_delete.py
synode.py/src/synodepy3/res/: README.md
synode.py/test/: prompt-1.in
synode.py/winsrv/: .gitignore  install-html-srv.bat  install-html-w.bat  install-html.bat  install-jserv-w.bat  install.bat  install.bat-delete  jserv-web.service  synode.service  uninstall-html-srv.bat  uninstall.bat
(+708 files in other folders)
