[build-system]
requires = ["setuptools>=40.8.0", "wheel", "anson.py3>=0.2.5"]
build-backend = "setuptools.build_meta"

[project]
name = "synode.py3"
version = "0.7.1" # updated by invoke
description = "Portfolio Synode Stand Alone Service"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ody Z", email = "odys.zhou@gmail.com" }]
keywords = ["Documents", "Files", "Relational Database", "Synchronization"]
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.5.0,<=6.8.2.1",
    "qrcode",
    "anson.py3>=0.2.5",
    "anclient.py3>=0.1.4",
    "psutil",
    "pillow>=8.0.0",
    "invoke>=2.2.0"
]

[project.scripts]
synode-uninstall-srv = "synodepy3.cli:uninst_srv"
synode-clean = "synodepy3.cli:clean"
synode-start-web = "synodepy3.cli:startweb"

[tool.setuptools]

packages = ["synodepy3", "src.io"]
package-dir = { "synodepy3" = "src/synodepy3", "src.io" = "src/io" }
package-data = { "synodepy3" = ["form.ui", "synode.json", "res/*"], "src.io" = ["*"] }

zip-safe = false